@@ -1,7 +1,7 @@
 ﻿//------------------------------------------------------------------------------
 // <auto-generated>
 //     This code was generated by a tool.
-//     Runtime Version:4.0.30319.239
+//     Runtime Version:4.0.30319.488
 //
 //     Changes to this file may cause incorrect behavior and will be lost if
 //     the code is regenerated.
@@ -2561,6 +2561,15 @@ namespace MySql.Data.VisualStudio.Properties {
         public static string FKSameColumn {
             get {
                 return ResourceManager.GetString("FKSameColumn", resourceCulture);
+            }
+        }
+        
+        /// <summary>
+        ///   Looks up a localized string similar to Data type is not valid..
+        /// </summary>
+        public static string InvalidDataType {
+            get {
+                return ResourceManager.GetString("InvalidDataType", resourceCulture);
             }
         }
         
